src/scss/layout/_x-column-template.scss
.post-template-default,
.page-template-one-column-template,
.page-template-two-column-template,
.page-template-archives,
.archive,
.error404,
.page-template-archives,
.page-id-179,
.single-eventbrite_events {

  .hero-image {
    background-repeat: no-repeat;
    background-size: cover;
    height: 60vh;
    background-position: bottom;
    position: relative;
    overflow: hidden;
  }

  .hero-text {
    .text-container {
      background-color: $black;
      display: inline-block;
      padding: 0.5rem;
      font-size: 3rem;
      font-weight: bold;
      font-family: 'Roboto', sans-serif;
      color: $white;
      padding: 1rem 3rem 1rem 3rem;

      .highlight {
        color: $opal;
      }
    }
  }

  h1 {
    font-family: 'Roboto', sans-serif;
    color: $black;
    text-align: start;
  }

  img {
    max-width: 100%;
    height: auto;
  }

  a {
    &.content-cta {
      font-weight: bold;
      display: block;
      max-width: 280px;
      border: 1px solid white;
      background-color: #4b3f72;
      text-align: center;
      color: white;
      padding: 15px 10px;
      border-radius: 6px;
      margin: 30px auto;
    }
  }

  .person {
    font-size: 16px;
    height: auto;
    margin-bottom:20px;
    p {
      margin-bottom: 2px;
    }
    .person-image{
      font-weight: bold;
      text-align: center;
      height:100%;
      width: 20%;
      img{
        width:100%;
        height: auto;
      }
    }
    .person-content{
      margin-left: 10px;
      width: 75%;
    }
  }

  .sidebar-menu {
    text-decoration: none;
    color: black;
    font-size: 24px;

    ul {
      list-style: none;
      padding-left: 0px;
      li {
        a{
          color: black;
        }
      }
    }
    .current-menu-item {
      font-weight: bold;
    }
  }

}

@media (max-width: 992px) {
  .page-template-one-column-template,
  .page-template-two-column-template{
    .sidebar-menu {
      text-align:center;
      padding-top: 10px;
    }
    h1 {
      margin-bottom: 10px;
    }
    .events-column .event {
      max-width: 75%;
      margin: 20px auto;
    }
  }
}

span.social-title {
  font-size: 1.5rem;
  font-weight: 500;
}

